@@ -4,6 +4,7 @@ package com.sangui.config;
 import com.sangui.config.filter.TokenVerifyFilter;
 import com.sangui.config.handler.MyAuthenticationFailureHandler;
 import com.sangui.config.handler.MyAuthenticationSuccessHandler;
+import com.sangui.config.handler.MyLogoutSuccessHandler;
 import jakarta.annotation.Resource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -19,8 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-
-import static com.sangui.constant.Constants.LOGIN_URI;
+import java.util.List;
 
 
 /**
@@ -31,10 +31,12 @@ import static com.sangui.constant.Constants.LOGIN_URI;
  */
 @Configuration
 public class SecurityConfig {
-    // 在 user 表中，登录账号的属性名
-    private final String NAME_OF_USERNAME_IN_USER = "loginAct";
-    // 在 user 表中，密码的属性名
-    private final String NAME_OF_PASSWORD_IN_USER = "loginPwd";
+    // 静态文本，后端处理登录的登录地址
+    public static final String LOGIN_URI = "/api/login";
+    // 静态文本，是在 tUser 实体类中，登录账号的属性名
+    private final String NAME_OF_USERNAME_IN_TUSER = "loginAct";
+    // 静态文本，是在 tUser 实体类中，密码的属性名
+    private final String NAME_OF_PASSWORD_IN_TUSER = "loginPwd";
 
     @Resource
     TokenVerifyFilter tokenVerifyFilter;
@@ -45,56 +47,80 @@ public class SecurityConfig {
     @Resource
     private MyAuthenticationFailureHandler myAuthenticationFailureHandler;
 
+    @Resource
+    private MyLogoutSuccessHandler myLogoutSuccessHandler;
+
+    // 将加密器纳入 IoC 容器
     @Bean
     public PasswordEncoder passwordEncoder(){
         return new BCryptPasswordEncoder();
     }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity, CorsConfigurationSource corsConfigurationSource, TokenVerifyFilter tokenVerifyFilter) throws Exception {
-        // 禁用跨站请求伪造
-        return httpSecurity.formLogin((formLogin)->{
-            formLogin.loginProcessingUrl(LOGIN_URI)
-                    .usernameParameter(NAME_OF_USERNAME_IN_USER)
-                    .passwordParameter(NAME_OF_PASSWORD_IN_USER)
-                    .successHandler(myAuthenticationSuccessHandler)
-                    .failureHandler(myAuthenticationFailureHandler);
-        })
-        .authorizeHttpRequests((authorize)->{
-            // 任何请求都需要登录后才能访问，除了 LOGIN_URI = "/api/login"
-            authorize.requestMatchers(LOGIN_URI).permitAll()
-                    .anyRequest().authenticated();
-        })
-        // 方法引用 禁用跨站请求伪造
-        .csrf(AbstractHttpConfigurer::disable)
-        // 支持跨域请求
-        .cors((cors) ->{
-            cors.configurationSource(corsConfigurationSource);
-        })
-
-        .sessionManagement((session) ->{
-            // Session 创建策略，无 Session 状态
-            session.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
-        })
-
-        // 添加自定义 Filter
-        .addFilterBefore(tokenVerifyFilter, LogoutFilter.class)
-
-        .build();
-    }
-
+    // 将 corsConfigurationSource 纳入 IoC 容器
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration corsConfiguration = new CorsConfiguration();
         // 允许任何来源，http://localhost:8080
-        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedOrigins(List.of("*"));
         // 运行任何方式，post,get,delete,put
-        corsConfiguration.setAllowedMethods(Arrays.asList("*"));
+        corsConfiguration.setAllowedMethods(List.of("*"));
         // 设置运行的请求头
-        corsConfiguration.setAllowedHeaders(Arrays.asList("*"));
+        corsConfiguration.setAllowedHeaders(List.of("*"));
 
+        // 选择 UrlBasedCorsConfigurationSource 的实现
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // 设置该 source 的配置，并且它的匹配路径是多级目录
         source.registerCorsConfiguration("/**",corsConfiguration);
         return source;
+    }
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity, CorsConfigurationSource corsConfigurationSource, TokenVerifyFilter tokenVerifyFilter) throws Exception {
+        // 禁用跨站请求伪造
+        return httpSecurity
+                .formLogin((formLogin)->{
+                    // 设置后端处理登录的登录地址
+                    formLogin.loginProcessingUrl(LOGIN_URI)
+                            // 设置用户名的参数名
+                            .usernameParameter(NAME_OF_USERNAME_IN_TUSER)
+                            // 设置密码的参数名
+                            .passwordParameter(NAME_OF_PASSWORD_IN_TUSER)
+                            // 设置登录成功后的 Handler
+                            .successHandler(myAuthenticationSuccessHandler)
+                            // 设置登录失败后的 Handler
+                            .failureHandler(myAuthenticationFailureHandler);
+
+        })
+                // 对除登录以外的请求进行拦截
+                .authorizeHttpRequests((authorizeHttpRequests)->{
+                    authorizeHttpRequests
+                            // 除了 LOGIN_URI = "/api/login" 这个地址
+                            .requestMatchers(LOGIN_URI).permitAll()
+                            // 任何请求都需要登录后才能访问
+                            .anyRequest().authenticated();
+                })
+                // 禁用跨站伪造请求
+                .csrf(AbstractHttpConfigurer::disable)
+
+                // 支持跨域请求
+                .cors((cors) -> {
+                    cors.configurationSource(corsConfigurationSource);
+                })
+
+                .sessionManagement((session) ->{
+                    // Session 创建策略，无 Session 状态
+                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+                })
+
+                // 添加自定义 Filter
+                .addFilterBefore(tokenVerifyFilter, LogoutFilter.class)
+
+                // 退出登录
+                .logout((logout) ->{
+                    logout.logoutUrl("/api/logout")
+                            .logoutSuccessHandler(myLogoutSuccessHandler);
+                })
+
+                .build();
     }
 }
